kubernetes/applications/python_web_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-web-app
  namespace: python-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-web-app
  template:
    metadata:
      labels:
        app: python-web-app
    spec:
      serviceAccountName: web-sa
      securityContext:
        runAsNonRoot: true
        fsGroup: 2000 
      containers:
      - name: python-web-app
        image: bszadkowski/python-web-app@sha256:0a27241e8feefac78e441a9a3d02d89a40c6a66ca4112bedaaccf209daba4616
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 10001
          seccompProfile:
            type: RuntimeDefault
          allowPrivilegeEscalation: false    
          capabilities:
            drop:
              - ALL     
        volumeMounts:
        - mountPath: /tmp
          name: tmp-storage
        resources:
          requests:
            memory: "256Mi"   
            cpu: "100m"
          limits:
            memory: "512Mi"   
            cpu: "500m"
      volumes:
      - name: tmp-storage
        emptyDir: {}
