kubernetes/applications/python_web_app/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-loadbalancer-ingress
  namespace: python-web-app
spec:
  podSelector:
    matchLabels:
      app: python-web-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0  
      ports:
        - protocol: TCP
          port: 5000
  egress:
    - {}
